# skin_lesion_detector

flutter_opencv_plugin/: README.md  pubspec.yaml
flutter_opencv_plugin/android/: build.gradle
flutter_opencv_plugin/android/src/main/: AndroidManifest.xml
flutter_opencv_plugin/example/: pubspec.yaml
flutter_opencv_plugin/example/android/app/: build.gradle
flutter_opencv_plugin/example/android/app/src/main/: AndroidManifest.xml
flutter_opencv_plugin/example/ios/Runner/: Info.plist
flutter_opencv_plugin/example/lib/: main.dart
flutter_opencv_plugin/example/test/: widget_test.dart
flutter_opencv_plugin/ios/: flutter_opencv_plugin.podspec
flutter_opencv_plugin/ios/Classes/: blob.hpp  flutter_opencv.cpp  skin_lesion_detector.hpp  yuv2bgr.hpp
flutter_opencv_plugin/lib/: constants.dart  flutter_opencv_plugin.dart
flutter_opencv_plugin/lib/pages/: camera_screen.dart
opencv_cpp/: CMakeLists.txt  blob.hpp  flutter_opencv.cpp  main.cpp  skin_lesion_detector.hpp  yuv2bgr.hpp
opencv_cpp/images/: images.jfif
